# WaveRedact

./: .env.example  .gitignore  LICENSE  README.md  audio_manager.py  main.py  prompts.yaml  pyproject.toml  pytest.ini  test_result.csv  waveredact.spec
.github/workflows/: pytest.yaml  release.yaml
cli/: main.py
models/: gguf_model.py  llama8B.py  model.py  openai_privacy_filter.py
pipeline/: gliner.py  mapper.py
pipeline/extractors/: base_extractor.py  gliner_extractor.py  regex_extractor.py
safewave/factories/: gliner_factory.py
safewave/models/: gguf_model.py
safewave/pipeline/: gliner.py  orchestrator.py  privacy_pipeline.py
safewave/pipeline/extractors/: llm_extractor.py
safewave/services/: llama_server.py  transcribe.py
safewave/utils/: audio_censor.py  audio_manager.py
services/: llama_server.py
tests/: golden_dataset.json  test_maker.py
tests/gliner_tests/: test_gliner.py
tests/maker_model_test/: evaluate_maker.py  test_maker.py
tests/unit/: test_app.py
tests/unit/models/: test_gguf_model.py
tests/unit/pipeline/: test_extractors.py  test_mapper.py  test_orchestrator.py  test_privacy_pipeline.py
tests/unit/services/: test_llama_server.py  test_transcribe.py
tests/unit/utils/: test_audio_censor.py  test_audio_manager.py  test_chunker.py  test_gpu_setup.py  test_level.py  test_mapper.py
utils/: chunk.py
waveredact/: app.py
waveredact/factories/: gliner_factory.py  whisper_factory.py
waveredact/models/: gguf_model.py  model.py
waveredact/pipeline/: mapper.py  orchestrator.py  privacy_pipeline.py
waveredact/pipeline/extractors/: base_extractor.py  gliner_extractor.py  llm_extractor.py  regex_extractor.py
waveredact/services/: llama_server.py  transcribe.py
waveredact/utils/: audio_censor.py  audio_manager.py  chunk.py  gpu_setup.py  level.py  path_utils.py
web/: app.py
web/api/: __init__.py  audio_api.py
web/api/routers/: audio_router.py  frontend_router.py  ws_router.py
web/core/: dependencies.py
web/schemas/: __init__.py  audio.py
web/services/: __init__.py  audio_processing_service.py  file_service.py  model_manager.py  websocket_manager.py
web/static/: index.html  style.css
web/static/js/: buttons.js  upload_file.js
