[project]
name = "safewave"
version = "0.2.0"
description = "A local data privacy pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "gliner>=0.2.24",
    "huggingface-hub>=1.17.0",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "transformers>=5.10.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.136.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.scripts]
safewave = "cli.main:main"
safewave-web = "web.app:start_server"

[tool.setuptools]
packages = ["safewave", "cli", "web"]
