[project]
name = "WaveRedact"
version = "0.2.0"
description = "A local data privacy pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "gliner2>=1.3.1",
    "huggingface-hub>=1.17.0",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "transformers>=5.10.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.136.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.scripts]
waveredact = "cli.main:main"
waveredact-web = "web.app:start_server"

[tool.setuptools]
packages = ["waveredact", "cli", "web"]

[tool.pytest.ini_options]
addopts = "--cov=waveredact --cov-report=term-missing"
pythonpath = ["."]

testpaths = ["tests"]

python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

norecursedirs = [
    "gliner_test", 
    "maker_model_test", 
    "venv", 
    "env", 
    ".venv", 
    ".git", 
    "__pycache__"
]

filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["waveredact"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod"
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]
