[project]
name = "WaveRedact"
version = "0.2.0"
description = "A local data privacy pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "gliner2>=1.3.1",
    "huggingface-hub>=0.24.0,<1.0",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "torch>=2.4.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0,<4.49.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.136.3",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.scripts]
waveredact = "cli.main:main"
waveredact-web = "web.app:start_server"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
packages = ["waveredact", "cli", "web"]

[tool.pytest.ini_options]
addopts = "--cov=waveredact --cov-report=term-missing"
pythonpath = ["."]

testpaths = ["tests"]

python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

norecursedirs = [
    "gliner_test", 
    "maker_model_test", 
    "venv", 
    "env", 
    ".venv", 
    ".git", 
    "__pycache__"
]

filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["waveredact"]
omit = [
    "*/__init__.py",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
